off to the pond

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,6 @@
 {
-    "extends": [
-        "wesbos"
-    ],
-    "rules": {
-        "guard-for-in": "off"
-    }
+  "extends": ["wesbos"],
+  "rules": {
+    "guard-for-in": 0
+  }
 }
